<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionListener"
            type="nanodegree.bakingapp.view.recipes.RecipeItemActionListener" />

        <variable
            name="recipe"
            type="nanodegree.bakingapp.model.vo.Recipe" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_card_view_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:foreground="?selectableItemBackground"
            android:onClick="@{(view) -> actionListener.onRecipeClicked(recipe, view.getContext())}"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/recipe_card_view_image"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipe_card_default_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/recipe_card_view_title"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@{recipe.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_card_view_image"
                    tools:text="Recipe Title" />

                <TextView
                    android:id="@+id/recipe_card_view_serve"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{@plurals/recipe_card_serves(recipe.servings, recipe.servings)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_card_view_title"
                    tools:text="Serves 17 people" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>